adding another role as common for tasks main yml

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -3,3 +3,8 @@
     name: nginx
     state: installed
 
+- name: Include Download App Code Tasks From Common Role
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: download-app-code
+
