--- a/roles/common/tasks/download-app-code.yml
+++ b/roles/common/tasks/download-app-code.yml
@@ -8,3 +8,13 @@
     url: https://github.com/roboshop-devops-project/{{ COMPONENT }}/archive/main.zip
     dest: /tmp/{{ COMPONENT }}.zip
 
+- name: Remove Previous Version of App
+  ansible.builtin.file:
+    path: "{{ APP_LOC }}"
+    state: absent
+
+- name: Download App Content & Extract It
+  ansible.builtin.unarchive:
+    src: https://github.com/roboshop-devops-project/{{ COMPONENT }}/archive/main.zip
+    dest: "{{ APP_USER }}"
+    remote_src: yes
