--- a/roles/common/tasks/download-app-code.yml
+++ b/roles/common/tasks/download-app-code.yml
@@ -13,6 +13,11 @@
     path: "{{ APP_LOC }}"
     state: absent
 
+- name: Create App Directory
+  ansible.builtin.file:
+    path: "{{ APP_LOC }}"
+    state: directory
+
 - name: Download App Content & Extract It
   ansible.builtin.unarchive:
     src: https://github.com/roboshop-devops-project/{{ COMPONENT }}/archive/main.zip
