--- a/roles/common/tasks/download-app-code.yml
+++ b/roles/common/tasks/download-app-code.yml
@@ -13,10 +13,10 @@
     path: "{{ APP_LOC }}"
     state: absent
 
-#- name: Create App Directory
-#  ansible.builtin.file:
-#    path: "{{ APP_LOC }}"
- #   state: directory
+- name: Create App Directory
+  ansible.builtin.file:
+    path: "{{ APP_LOC }}"
+    state: directory
 
 - name: Download App Content & Extract it
   ansible.builtin.unarchive:
