Copy Extracted App Content to App Location

--- a/roles/common/tasks/download-app-code.yml
+++ b/roles/common/tasks/download-app-code.yml
@@ -13,13 +13,13 @@
     path: "{{ APP_LOC }}"
     state: absent
 
-- name: Create App Directory
-  ansible.builtin.file:
-    path: "{{ APP_LOC }}"
-    state: directory
-
 - name: Download App Content & Extract it
   ansible.builtin.unarchive:
     src: https://github.com/roboshop-devops-project/{{ COMPONENT }}/archive/main.zip
-    dest: "{{ APP_LOC }}"
+    dest: "/tmp"
     remote_src: yes
+
+- name: Copy Extracted App Content to App Location
+  ansible.builtin.copy:
+    src: /tmp/{{COMPONENT}}-main/
+    dest: "{{ APP_LOC }}"
