--- a/roles/common/tasks/download-app-code.yml
+++ b/roles/common/tasks/download-app-code.yml
@@ -3,11 +3,6 @@
   ansible.builtin.user:
     name: " {{ APP_USER }}"
 
-- name: Download App Content
-  ansible.builtin.get_url:
-    url: https://github.com/roboshop-devops-project/{{ COMPONENT }}/archive/main.zip
-    dest: /tmp/{{ COMPONENT }}.zip
-
 - name: Remove Previous Version of App
   ansible.builtin.file:
     path: "{{ APP_LOC }}"
@@ -15,7 +10,7 @@
 
 - name: Download App Content & Extract it
   ansible.builtin.unarchive:
-    src: https://github.com/roboshop-devops-project/{{ COMPONENT }}/archive/main.zip
+    src: https://github.com/nawaz990/{{COMPONENT}}/archive/refs/heads/main.zip
     dest: "/tmp"
     remote_src: yes
 
