created roboshop conf file and copied roboshopconf file in the etc/nginx/default.d/ location and restarted nginx

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -8,3 +8,12 @@
     name: common
     tasks_from: download-app-code
 
+- name: Copy RoboShop Configuration File
+  ansible.builtin.copy:
+    src: roboshop.conf
+    dest: /etc/nginx/default.d/roboshop.conf
+
+- name: Start Nginx Service
+  ansible.builtin.systemd:
+    name: nginx
+    state: restarted
