creating mongo repo file from given link in notion mongodb and pasting the content from server and in tasks mainyml file copied mongorepo file on the location and installed mongodb and updated mongodb listen address

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,4 +1,15 @@
-- name: Test for mongodb
-  debug:
-    msg: mongodb
+- name: Copy MongoDB Yum Repo File
+  ansible.builtin.copy:
+    src: mongodb.repo
+    dest: /etc/yum.repos.d/mongodb.repo
 
+- name: Install MongoDB
+  ansible.builtin.yum:
+    name: mongodb-org
+    state: installed
+
+- name: Update MongoDB Listen Address
+  ansible.builtin.replace:
+    path: /etc/mongod.conf
+    regexp: '127.0.0.1'
+    replace: '0.0.0.0'
