--- a/aws-parameters.yml
+++ b/aws-parameters.yml
@@ -6,6 +6,6 @@
         name: "param.dev.catalogue.MONGO"
         value: "xyz"
         region: "us-east-1"
-      loops:
+      loop:
         - {name: "param.dev.catalogue.MONGO", value: "true"}
         - {name: "param.dev.user.MONGO", value: "true"}
