--- a/aws-parameters.yml
+++ b/aws-parameters.yml
@@ -3,8 +3,8 @@
   tasks:
     - name: Create Value
       community.aws.aws_ssm_parameter_store:
-        name: "param.dev.catalogue.MONGO"
-        value: "xyz"
+        name: "{{item.name}}"
+        value: "{{item.value}}"
         region: "us-east-1"
       loop:
         - {name: "param.dev.catalogue.MONGO", value: "true"}
