--- a/roles/catalogue/files/systemd.service
+++ b/roles/catalogue/files/systemd.service
@@ -2,6 +2,7 @@
 Description=Catalogue Service
 
 [Service]
+Environment=MONGO="{{ lookup('aws_ssm', 'param.{{ENV}}.catalogue.MONGO', region='us-east-1' ) }}"
 ExecStart=//usr/bin/node /home/roboshop/catalogue/server.js
 
 [Install]
