added user roboshop to systemd service file

--- a/roles/catalogue/templates/systemd.service
+++ b/roles/catalogue/templates/systemd.service
@@ -2,6 +2,7 @@
 Description=Catalogue Service
 
 [Service]
+User=roboshop
 Environment=MONGO="{{ lookup('aws_ssm', 'param.{{ENV}}.catalogue.MONGO', region='us-east-1' ) }}"
 ExecStart=//usr/bin/node /home/roboshop/catalogue/server.js
 
