adding schema to mongodb roboshop configuration

--- a/aws-parameters.yml
+++ b/aws-parameters.yml
@@ -9,3 +9,8 @@
       loop:
         - {name: "param.dev.catalogue.MONGO", value: "true"}
         - {name: "param.dev.user.MONGO", value: "true"}
+        - {name: "param.dev.frontend.CATALOGUE_URL", value: "http://dev-catalogue.devopsn69.online:8080/"}
+        - {name: "param.dev.frontend.USER_URL", value: "http://dev-user.devopsn69.online:8080/"}
+        - {name: "param.dev.frontend.CART_URL", value: "http://dev-cart.devopsn69.online:8080/"}
+        - {name: "param.dev.frontend.SHIPPING_URL", value: "http://dev-shipping.devopsn69.online:8080/"}
+        - {name: "param.dev.frontend.PAYMENT_URL", value: "http://dev-payment.devopsn69.online:8080/"}
