--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -20,3 +20,17 @@
     state: restarted
     enabled: yes
 
+- name: Download App Content & Extract it
+  ansible.builtin.unarchive:
+    src: https://github.com/nawaz990/{{COMPONENT}}/archive/refs/heads/main.zip
+    dest: "/tmp"
+    remote_src: yes
+
+- name: Load Schema
+  community.mongodb.mongodb_shell:
+    file: "/tmp/mongodb-main/{{item}}.js"
+    idempotent: yes
+  loop:
+    - catalogue
+    - users
+
