--- a/roles/catalogue/templates/systemd.service
+++ b/roles/catalogue/templates/systemd.service
@@ -4,6 +4,7 @@ Description=Catalogue Service
 [Service]
 User=roboshop
 Environment=MONGO="{{ lookup('aws_ssm', 'param.{{ENV}}.catalogue.MONGO', region='us-east-1' ) }}"
+Environment=MONGO_URL="{{ lookup('aws_ssm', 'param.{{ENV}}.catalogue.MONGO_URL', region='us-east-1' ) }}"
 ExecStart=//usr/bin/node /home/roboshop/catalogue/server.js
 
 [Install]
