--- a/roles/redis/tasks/main.yml
+++ b/roles/redis/tasks/main.yml
@@ -1,8 +1,7 @@
 - name: Install Redis Repo Package
-  ansible.builtin.yum:
+  ansible.builtin.dnf:
     name: 'https://rpms.remirepo.net/enterprise/remi-release-8.rpm'
     state: present
-    disable_gpg_check: no
 
 - name: Enable Redis 6 Module
   ansible.builtin.shell: dnf module enable redis:remi-6.2 -y
